Fully functional Add

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <!--Import materialize.css (requires jQuery) -->
     <link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
     <title>Movie Project</title>
   </head>
