--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i|Raleway:100,300" rel="stylesheet">
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiuF-jDh08voLNMBlWXDZUmv14EorSsoM&libraries=places"></script>
 
